--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,3 +31,62 @@ a:active {
 	color: #0099cc;
     text-decoration: none;
 }
+
+span {
+	border: 2pt solid black;
+	padding: 5px;
+}
+
+button{
+	position: relative;
+/*	position:fixed;
+	left: 0%;
+	top:0%;*/
+	border: 0; 
+	background: transparent;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position:fixed;
+	left: 0%;
+	top:0%;
+	border: 0; 
+	background: transparent;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: none;
+    min-width: 160px;
+    max-width: 50%;
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: inline;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+/*.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}*/
